k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-service
  namespace: invoice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth-service
  template:
    metadata:
      labels:
        app: auth-service
    spec:
      containers:
      - name: auth-service
        image: auth-service:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8001
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  namespace: invoice-app
spec:
  selector:
    app: auth-service
  ports:
  - port: 8001
    targetPort: 8001
