k8s/upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload-service
  namespace: invoice-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload-service
  template:
    metadata:
      labels:
        app: upload-service
    spec:
      containers:
      - name: upload-service
        image: upload-service:v1
        imagePullPolicy: Never
        ports:
        - containerPort: 8002
---
apiVersion: v1
kind: Service
metadata:
  name: upload-service
  namespace: invoice-app
spec:
  selector:
    app: upload-service
  ports:
  - port: 8002
    targetPort: 8002
